<resources>
    <string name="app_name">SOLVE Foundation</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="description">Description</string>
    <string name="no_of_attempts_remaining">No. of Attempts remaining:</string>
    <string name="solve_foundation">SOLVE</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">UserName</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>