<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".Retrofit.DetailActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="monospace"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/userCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/country"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/age"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/userGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/gender"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/userDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6A6969"
        android:text="@string/description"
        android:fontFamily="sans-serif-black"
        android:textSize="15sp"/>


</LinearLayout>